normalize old iocs

--- a/colibriloader/colibriloader.strings
+++ b/colibriloader/colibriloader.strings
@@ -1,3 +1,5 @@
+# Sample: 06ac75b3db694116aecb674b328d6378cef7f55287deb5053339a4c8bbe3e639
+
 0x401faf %s\\%s
 0x401fd4 \\Microsoft\\WindowsApps
 0x401ffa Get-Variable.exe
