--- a/privateloader/core.strings
+++ b/privateloader/core.strings
@@ -1,3 +1,5 @@
+# Sample: 4312d4c22e8039a51c04bec4e024027b5e663d85d430f6d29725da4ad7622c7b
+
 0x1000044e 10
 0x10000662 Snowman+under_a_sn0wdrift_forgot_the_Snow_Maiden
 0x10010ff1 CBC
